# gfoc

crates/gfoc/: Cargo.toml  README.md  flake.nix
crates/gfoc-proto/: Cargo.toml
crates/gfoc-proto/src/: lib.rs
crates/gfoc-ui/: Cargo.toml  config.json
crates/gfoc-ui/src/: client.rs  main.rs  worker.rs
crates/gfoc/.cargo/: config.toml
crates/gfoc/src/: foc_tests.rs  main.rs  trap_tests.rs  utils.rs
crates/gfoc/src/board/: mod.rs
crates/gfoc/src/control/: angle_estimator.rs  driver.rs  mod.rs
crates/gfoc/src/tasks/: adc.rs  angle.rs  communication.rs  control.rs
gfoc/: Cargo.toml
gfoc-proto/src/: lib.rs
gfoc-ui/src/: cache.rs  client.rs  worker.rs
gfoc/src/: foc_control.rs  foc_tests.rs  main.rs  trap_tests.rs
gfoc/src/control/: driver.rs  mod.rs
gfoc/src/tasks/: adc.rs  angle.rs  mod.rs
