[package]
name = "embassy-foc"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = [
 "platform-cortex-m",
 "executor-thread",
 "executor-interrupt",
 "defmt",
]}
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.6.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver-any",
    "exti",
    "chrono",
    "stm32g431cb",
    "time",
    "memory-x"
]}
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embedded-hal = "1.0.0"
heapless = "0.8.0"
static_cell = "2.1.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
rtt-target = { version = "0.5.0" }
embedded-hal-async = { version = "1.0.0" }
defmt = "1.0.1"
defmt-rtt = { version = "1.1.0", features = ["disable-blocking-mode"] }
#defmt-rtt = { version = "1.1.0" }
libm = "0.2.16"
critical-section = "1.2.0"
foc = "0.3.0"
as5600 = { version = "0.8.0", features = ["async"] }
cobs = { version = "0.5.1", default-features = false, features = ["defmt"] }
gfoc-proto = { path = "../gfoc-proto/", features = ["defmt"] }
fixed = "1.31.0"
portable-atomic = "1.13.1"
biquad = "0.6.0"
# thiserror = { version = "2.0.18", default-features = false }


[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "174589c234455b2486fbbaa59f7bdf04c6c1a9e7" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "174589c234455b2486fbbaa59f7bdf04c6c1a9e7" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "174589c234455b2486fbbaa59f7bdf04c6c1a9e7" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "174589c234455b2486fbbaa59f7bdf04c6c1a9e7" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "174589c234455b2486fbbaa59f7bdf04c6c1a9e7" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "174589c234455b2486fbbaa59f7bdf04c6c1a9e7" }

