[package]
name = "gfoc-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0.1", optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["postcard-derive", "heapless-cas"]}
serde = { version = "1.0.228", default-features = false }

[features]
default = []
defmt = ["dep:defmt", "postcard/use-defmt"]
std = ["serde/std", "postcard/use-std"]
